# weather_collect

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile_  README.MD  docker-compose.yml  gitlab-ci.yml  pyproject.toml  pyproject.toml_  requirements.txt  snapshot.json  tree.txt  weather_history.txt
HomeCenter/: Dockerfile  db.sqlite3  manage.py  snapshot.json
HomeCenter/HomeApp/: admin.py  models.py  urls.py  views.py
HomeCenter/HomeApp/migrations/: 0001_initial.py
HomeCenter/HomeApp/services/: tasks.py
HomeCenter/HomeApp/templates/: base.html  charts.html  home.html
HomeCenter/HomeCenter/: asgi.py  settings.py  urls.py  wsgi.py
HomeCenter/static/: weather_history.txt
nginx/: nginx.conf
