[project]
name = "home-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-crontab>=0.7.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tinytuya>=1.16.1",
]
